Menambahkan Form nama dengan js css html dan php

--- a/file.html
+++ b/file.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="file.css" />
   </head>
   <body>
-    <h1>Assalamu'alaikum</h1>
+    <form action="/scripts/file.php" method="post">
+      <h1>Assalamu'alaikum</h1>
+      <label for="nama">Nama</label>
+      <input type="text" name="nama" id="nama" />
+      <p class="hari" id="hari">Date</p>
+      <button type="button" onclick="myFunction()">Try it</button>
+      <script src="/scripts/file.js"></script>
+    </form>
   </body>
 </html>
