Memperbaiki js dan mengatur css html

--- a/file.html
+++ b/file.html
@@ -9,11 +9,13 @@
   </head>
   <body>
     <form action="/scripts/file.php" method="post">
+      <button type="button" onclick="myFunction()" id="hari">Tanggal</button>
       <h1>Assalamu'alaikum</h1>
+      <br />
       <label for="nama">Nama</label>
       <input type="text" name="nama" id="nama" />
-      <p class="hari" id="hari">Date</p>
-      <button type="button" onclick="myFunction()">Try it</button>
+      <br />
+      <button type="submit">Klik!</button>
       <script src="/scripts/file.js"></script>
     </form>
   </body>
